5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4478/executions/1888_1645.log
== TEST (2019-07-09 16:20:26) 
-- CODE:
from numpy import*

vetor = array(eval(input("saques: ")))
saques = zeros(vetor, dtype=int)
saque = 0
for i range (size(vetor)):
	if(vetor[i]>=2000):
		saque = saque +1
		print(saque)
-- ERROR:
File "XXXX", line 6
    for i range (size(vetor)):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:20:39) 
-- CODE:
from numpy import*

vetor = array(eval(input("saques: ")))
saques = zeros(vetor, dtype=int)
saque = 0
for i in range (size(vetor)):
	if(vetor[i]>=2000):
		saque = saque +1
		print(saque)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:21:39) 
-- CODE:
from numpy import*

vetor = array(eval(input("saques: ")))
#saques = zeros(vetor, dtype=int)
saque = 0
for i in range (size(vetor)):
	if(vetor[i]>=2000):
		saque = saque +1
		print(saque)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:22:04) 
-- CODE:
from numpy import*

vetor = array(eval(input("saques: ")))
#saques = zeros(vetor, dtype=int)
saque = 0
for i in range (size(vetor)):
	if(vetor[i]>=2000):
		saque = saque +1
print(saque)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:24:32) 
-- CODE:
from numpy import*

vetor = array(eval(input("saques: ")))
#saques = zeros(vetor, dtype=int)
saque = 0
for i in range (size(vetor)):
	if(vetor[i]>=2000):
		saque = saque +1
print(saque)
for i in range (size(vetor)):
	if(vetor[i]>=2000):
	saques = zeros(vetor,dtype=int)
		print(saques)
-- ERROR:
File "XXXX", line 12
    saques = zeros(vetor,dtype=int)
         ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:25:52) 
-- CODE:
from numpy import*

vetor = array(eval(input("saques: ")))
#saques = zeros(vetor, dtype=int)
saque = 0
for i in range (size(vetor)):
	if(vetor[i]>=2000):
		saque = saque +1
print(saque)
for i in range (size(vetor)):
	saques = zero(vetor, dtype=int)
	if(vetor[i]>=2000):
			print(saques)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:26:23) 
-- CODE:
from numpy import*

vetor = array(eval(input("saques: ")))
#saques = zeros(vetor, dtype=int)
saque = 0
for i in range (size(vetor)):
	if(vetor[i]>=2000):
		saque = saque +1
print(saque)
for i in range (size(vetor)):
	saques = zeros(vetor, dtype=int)
	if(vetor[i]>=2000):
			print(saques)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:27:10) 
-- CODE:
from numpy import*

vetor = array(eval(input("saques: ")))
#saques = zeros(vetor, dtype=int)
saque = 0
for i in range (size(vetor)):
	if(vetor[i]>=2000):
		saque = saque +1
print(saque)
for i in range (size(vetor)):
	saques = zeros(vetor, dtype=int)
	if(saques[i]>=2000):
			print(saques)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:28:56) 
-- CODE:
from numpy import*

vetor = array(eval(input("saques: ")))
#saques = zeros(vetor, dtype=int)
saque = 0
for i in range (size(vetor)):
	if(vetor[i]>=2000):
		saque = saque +1
print(saque)
for i in range (size(vetor)):
	saques = zeros(vetor, dtype=int)
	if(vetor[i]>=2000):
		saques = saques+1
			print(saques)
-- ERROR:
File "XXXX", line 14
    print(saques)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:29:03) 
-- CODE:
from numpy import*

vetor = array(eval(input("saques: ")))
#saques = zeros(vetor, dtype=int)
saque = 0
for i in range (size(vetor)):
	if(vetor[i]>=2000):
		saque = saque +1
print(saque)
for i in range (size(vetor)):
	saques = zeros(vetor, dtype=int)
	if(vetor[i]>=2000):
		saques = saques+1
print(saques)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:31:46) 
-- CODE:
from numpy import*

vetor = array(eval(input("saques: ")))
#saques = zeros(vetor, dtype=int)
saque = 0
for i in range (size(vetor)):
	if(vetor[i]>=2000):
		saque = saque +1
print(saque)
for j in range (size(vetor)):
	saques = zeros(vetor, dtype=int)
	if(vetor[j]>=2000):
		saques = saques+1
print(saques)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:32:25) 
-- CODE:
from numpy import*

vetor = array(eval(input("saques: ")))
#saques = zeros(vetor, dtype=int)
saque = 0
for i in range (size(vetor)):
	if(vetor[i]>=2000):
		saque = saque +1
print(saque)
for j in range (size(vetor)):
saques = zeros(vetor, dtype=int)
	if(vetor[j]>=2000):
		saques = saques+1
print(saques)
-- ERROR:
File "XXXX", line 11
    saques = zeros(vetor, dtype=int)
         ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:33:12) 
-- CODE:
from numpy import*

vetor = array(eval(input("saques: ")))
#saques = zeros(vetor, dtype=int)
saque = 0
for i in range (size(vetor)):
	if(vetor[i]>=2000):
		saque = saque +1
print(saque)
saques = zeros(vetor, dtype = int)
for j in range (size(vetor)):
#saques = zeros(vetor, dtype=int)
	if(vetor[j]>=2000):
		saques = saques+1
print(saques)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:35:59) 
-- CODE:
from numpy import*

vetor = array(eval(input("saques: ")))
#saques = zeros(vetor, dtype=int)
saque = 0
for i in range (size(vetor)):
	if(vetor[i]>=2000):
		saque = saque +1
print(saque)
saques = zeros(vetor, dtype = int)
for j in range (size(vetor)):
#saques = zeros(vetor, dtype=int)
	if(vetor[j]>=2000):
		
print(saques)
-- ERROR:
File "XXXX", line 15
    print(saques)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:36:44) 
-- CODE:
from numpy import*

vetor = array(eval(input("saques: ")))
#saques = zeros(vetor, dtype=int)
saque = 0
for i in range (size(vetor)):
	if(vetor[i]>=2000):
		saque = saque +1
print(saque)
saques = zeros(vetor, dtype = int)
for j in range (size(vetor)):
#saques = zeros(vetor, dtype=int)
	if(vetor[j]>=2000):
		
print(saques)
-- ERROR:
File "XXXX", line 15
    print(saques)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:37:05) 
-- CODE:
from numpy import*

vetor = array(eval(input("saques: ")))
#saques = zeros(vetor, dtype=int)
saque = 0
for i in range (size(vetor)):
	if(vetor[i]>=2000):
		saque = saque +1
print(saque)
saques = zeros(vetor, dtype = int)
for j in range (size(vetor)):
#saques = zeros(vetor, dtype=int)
	if(vetor[j]>=2000):
	
print(saques[i])
-- ERROR:
File "XXXX", line 15
    print(saques[i])
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:37:31) 
-- CODE:
from numpy import*

vetor = array(eval(input("saques: ")))
#saques = zeros(vetor, dtype=int)
saque = 0
for i in range (size(vetor)):
	if(vetor[i]>=2000):
		saque = saque +1
print(saque)
saques = zeros(vetor, dtype = int)
for j in range (size(vetor)):
#saques = zeros(vetor, dtype=int)
	if(vetor[j]>=2000):
	saque[i]=saque[i]+1
print(saques)
-- ERROR:
File "XXXX", line 14
    saque[i]=saque[i]+1
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:37:50) 
-- CODE:
from numpy import*

vetor = array(eval(input("saques: ")))
#saques = zeros(vetor, dtype=int)
saque = 0
for i in range (size(vetor)):
	if(vetor[i]>=2000):
		saque = saque +1
print(saque)
saques = zeros(vetor, dtype = int)
for j in range (size(vetor)):
#saques = zeros(vetor, dtype=int)
	if(vetor[j]>=2000):
	
print(vetor)
-- ERROR:
File "XXXX", line 15
    print(vetor)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:37:55) 
-- CODE:
from numpy import*

vetor = array(eval(input("saques: ")))
#saques = zeros(vetor, dtype=int)
saque = 0
for i in range (size(vetor)):
	if(vetor[i]>=2000):
		saque = saque +1
print(saque)
saques = zeros(vetor, dtype = int)
for j in range (size(vetor)):
#saques = zeros(vetor, dtype=int)
	if(vetor[j]>=2000):
print(vetor)
-- ERROR:
File "XXXX", line 14
    print(vetor)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:39:11) 
-- CODE:
from numpy import*

vetor = array(eval(input("saques: ")))
#saques = zeros(vetor, dtype=int)
saque = 0
for i in range (size(vetor)):
	if(vetor[i]>=2000):
		saque = saque +1
print(saque)
saques = zeros(vetor, dtype = int)
for j in range (size(vetor)):
#saques = zeros(vetor, dtype=int)
	if(vetor[j]>=2000):
		print(saques)
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:40:41) 
-- CODE:
from numpy import*

vetor = array(eval(input("saques: ")))
#saques = zeros(vetor, dtype=int)
saque = 0
for i in range (size(vetor)):
	if(vetor[i]>=2000):
		saque = saque +1
print(saque)
saques = zeros(vetor, dtype = int)
for j in range (size(vetor)):
#saques = zeros(vetor, dtype=int)
	if(vetor[j]>=2000):
		saques[j]=saques[j]+1
		print(saques)
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:41:14) 
-- CODE:
from numpy import*

vetor = array(eval(input("saques: ")))
#saques = zeros(vetor, dtype=int)
saque = 0
for i in range (size(vetor)):
	if(vetor[i]>=2000):
		saque = saque +1
print(saque)
saques = zeros(vetor, dtype = int)
for j in range (size(vetor)):
#saques = zeros(vetor, dtype=int)
	if(vetor[j]>=2000):
		saques[j]=saques[j]+1
		print(saques)
		

-- EXECUTION TIME:
0.940723
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1888/1645/main.py", line 10, in <module>
    saques = zeros(vetor, dtype = int)
ValueError: array is too big; `arr.size * arr.dtype.itemsize` is larger than the maximum possible size.

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:41:27) 
-- CODE:
from numpy import*

vetor = array(eval(input("saques: ")))
#saques = zeros(vetor, dtype=int)
saque = 0
for i in range (size(vetor)):
	if(vetor[i]>=2000):
		saque = saque +1
print(saque)
#saques = zeros(vetor, dtype = int)
for j in range (size(vetor)):
#saques = zeros(vetor, dtype=int)
	if(vetor[j]>=2000):
		saques[j]=saques[j]+1
		print(saques)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:41:39) 
-- CODE:
from numpy import*

vetor = array(eval(input("saques: ")))
#saques = zeros(vetor, dtype=int)
saque = 0
for i in range (size(vetor)):
	if(vetor[i]>=2000):
		saque = saque +1
print(saque)
#saques = zeros(vetor, dtype = int)
for j in range (size(vetor)):
#saques = zeros(vetor, dtype=int)
	if(vetor[j]>=2000):
		saque[j]=saque[j]+1
		print(saques)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:42:04) 
-- CODE:
from numpy import*

vetor = array(eval(input("saques: ")))
#saques = zeros(vetor, dtype=int)
saque = 0
for i in range (size(vetor)):
	if(vetor[i]>=2000):
		saque = saque +1
print(saque)
#saques = zeros(vetor, dtype = int)
for j in range (size(vetor)):
#saques = zeros(vetor, dtype=int)
	if(vetor[j]>=2000):
		saque=saque+1
		print(saques)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:42:23) 
-- CODE:
from numpy import*

vetor = array(eval(input("saques: ")))
#saques = zeros(vetor, dtype=int)
saque = 0
for i in range (size(vetor)):
	if(vetor[i]>=2000):
		saque = saque +1
print(saque)
#saques = zeros(vetor, dtype = int)
for j in range (size(vetor)):
#saques = zeros(vetor, dtype=int)
	if(vetor[j]>=2000):
		saque=saque+1
		print(saque)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:42:48) 
-- CODE:
from numpy import*

vetor = array(eval(input("saques: ")))
#saques = zeros(vetor, dtype=int)
saque = 0
for i in range (size(vetor)):
	if(vetor[i]>=2000):
		saque = saque +1
print(saque)
saques = zeros((vetor), dtype = int)
for j in range (size(vetor)):
#saques = zeros(vetor, dtype=int)
	if(vetor[j]>=2000):
		saque=saque+1
		print(saque)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:43:35) 
-- CODE:
from numpy import*

vetor = array(eval(input("saques: ")))
#saques = zeros(vetor, dtype=int)
saque = 0
for i in range (size(vetor)):
	if(vetor[i]>=2000):
		saque = saque +1
print(saque)
saques = array(zeros((vetor), dtype = int))
for j in range (size(vetor)):
#saques = zeros(vetor, dtype=int)
	if(vetor[j]>=2000):
		saque=saque+1
		print(saque)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:46:31) 
-- CODE:
from numpy import*

vetor = array(eval(input("saques: ")))
#saques = zeros(vetor, dtype=int)
saque = 0
for i in range (size(vetor)):
	if(vetor[i]>=2000):
		saque = saque +1
print(saque)
saque = zeros((vetor), dtype = int)
for j in range (size(vetor)):
	if(vetor[j]>=2000):
		saque=saque+1
		print(saque)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:46:55) 
-- CODE:
from numpy import*

vetor = array(eval(input("saques: ")))
#saques = zeros(vetor, dtype=int)
saque = 0
for i in range (size(vetor)):
	if(vetor[i]>=2000):
		saque = saque +1
print(saque)
saque = zeros((vetor), dtype = int)
for j in range (size(vetor)):
	if(vetor[j]>=2000):
		saque=saque+1
		print(saque)

-- EXECUTION TIME:
2.42651
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1888/1645/main.py", line 10, in <module>
    saque = zeros((vetor), dtype = int)
ValueError: array is too big; `arr.size * arr.dtype.itemsize` is larger than the maximum possible size.

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:47:19) 
-- CODE:
from numpy import*

vetor = array(eval(input("saques: ")))
#saques = zeros(vetor, dtype=int)
saque = 0
for i in range (size(vetor)):
	if(vetor[i]>=2000):
		saque = saque +1
print(saque)
saques = zeros((vetor), dtype = int)
for j in range (size(vetor)):
	if(vetor[j]>=2000):
		saques[j]=saques+1
		print(saques)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:48:03) 
-- CODE:
from numpy import*

vetor = array(eval(input("saques: ")))
#saques = zeros(vetor, dtype=int)
saque = 0
for i in range (size(vetor)):
	if(vetor[i]>=2000):
		saque = saque +1
print(saque)
saques = zeros((vetor[i]), dtype = int)
for j in range (size(vetor)):
	if(vetor[j]>=2000):
		saques[j]=saques+1
		print(saques)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:48:27) 
-- CODE:
from numpy import*

vetor = array(eval(input("saques: ")))
#saques = zeros(vetor, dtype=int)
saque = 0
for i in range (size(vetor)):
	if(vetor[i]>=2000):
		saque = saque +1
print(saque)
saques = zeros((vetor[i]), dtype = int)
for j in range (size(vetor)):
	if(vetor[j]>=2000):
		
		print(saques)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:48:46) 
-- CODE:
from numpy import*

vetor = array(eval(input("saques: ")))
#saques = zeros(vetor, dtype=int)
saque = 0
for i in range (size(vetor)):
	if(vetor[i]>=2000):
		saque = saque +1
print(saque)
saques = zeros((vetor[i]), dtype = int)
for j in range (size(vetor)):
	if(vetor[j]>=2000):
		
		print(saques)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:48:52) 
-- CODE:
from numpy import*

vetor = array(eval(input("saques: ")))
#saques = zeros(vetor, dtype=int)
saque = 0
for i in range (size(vetor)):
	if(vetor[i]>=2000):
		saque = saque +1
print(saque)
saques = zeros((vetor[i]), dtype = int)
for j in range (size(vetor)):
	if(vetor[j]>=2000):
		
print(saques)

-- ERROR:
File "XXXX", line 14
    print(saques)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:48:57) 
-- CODE:
from numpy import*

vetor = array(eval(input("saques: ")))
#saques = zeros(vetor, dtype=int)
saque = 0
for i in range (size(vetor)):
	if(vetor[i]>=2000):
		saque = saque +1
print(saque)
saques = zeros((vetor[i]), dtype = int)
for j in range (size(vetor)):
	if(vetor[j]>=2000):
		
	print(saques)

-- ERROR:
File "XXXX", line 14
    print(saques)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:49:15) 
-- CODE:
from numpy import*

vetor = array(eval(input("saques: ")))
#saques = zeros(vetor, dtype=int)
saque = 0
for i in range (size(vetor)):
	if(vetor[i]>=2000):
		saque = saque +1
print(saque)
saques = zeros((vetor[i]), dtype = int)
for j in range (size(vetor)):
	if(vetor[j]>=2000):
		print(saques)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:49:21) 
-- CODE:
from numpy import*

vetor = array(eval(input("saques: ")))
#saques = zeros(vetor, dtype=int)
saque = 0
for i in range (size(vetor)):
	if(vetor[i]>=2000):
		saque = saque +1
print(saque)
saques = zeros((vetor[i]), dtype = int)
for j in range (size(vetor)):
	if(vetor[j]>=2000):
		print(saques)

-- EXECUTION TIME:
0.969196
-- TEST CASE 1:
---- input:
[2000,1500,2100,1500,3000,3200,1205,1800]
---- correct output:
4
[0 2 4 5]
---- user output:
4
[0 0 0 ... 0 0 0]
[0 0 0 ... 0 0 0]
[0 0 0 ... 0 0 0]
[0 0 0 ... 0 0 0]
-- TEST CASE 2:
---- input:
[2000,1500,2100,1500,3000]
---- correct output:
3
[0 2 4]
---- user output:
3
[0 0 0 ... 0 0 0]
[0 0 0 ... 0 0 0]
[0 0 0 ... 0 0 0]
-- TEST CASE 3:
---- input:
[2000,1500,1950,1555,1999,2050,2560,2851,1500,3000]
---- correct output:
5
[0 5 6 7 9]
---- user output:
5
[0 0 0 ... 0 0 0]
[0 0 0 ... 0 0 0]
[0 0 0 ... 0 0 0]
[0 0 0 ... 0 0 0]
[0 0 0 ... 0 0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:49:22) 
-- CODE:
from numpy import*

vetor = array(eval(input("saques: ")))
#saques = zeros(vetor, dtype=int)
saque = 0
for i in range (size(vetor)):
	if(vetor[i]>=2000):
		saque = saque +1
print(saque)
saques = zeros((vetor[i]), dtype = int)
for j in range (size(vetor)):
	if(vetor[j]>=2000):
		print(saques)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:49:41) 
-- CODE:
from numpy import*

vetor = array(eval(input("saques: ")))
#saques = zeros(vetor, dtype=int)
saque = 0
for i in range (size(vetor)):
	if(vetor[i]>=2000):
		saque = saque +1
print(saque)
saques = zeros((vetor[i]), dtype = int)
for j in range (size(vetor)):
	if(vetor[j]>=2000):
		print(saques)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:50:33) 
-- CODE:
from numpy import*

vetor = array(eval(input("saques: ")))
#saques = zeros(vetor, dtype=int)
saque = 0
for i in range (size(vetor)):
	if(vetor[i]>=2000):
		saque = saque +1
print(saque)
saques = zeros((vetor[i]), dtype = int)
for j in range (vetor[j]>=2000):
		print(saques)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:51:05) 
-- CODE:
from numpy import*

vetor = array(eval(input("saques: ")))
#saques = zeros(vetor, dtype=int)
saque = 0
for i in range (size(vetor)):
	if(vetor[i]>=2000):
		saque = saque +1
print(saque)
saques = zeros((vetor[i]), dtype = int)
for i in range (vetor[i]>=2000):
		print(saques)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:51:24) 
-- CODE:
from numpy import*

vetor = array(eval(input("saques: ")))
#saques = zeros(vetor, dtype=int)
saque = 0
for i in range (size(vetor)):
	if(vetor[i]>=2000):
		saque = saque +1
print(saque)
saques = zeros((vetor[i]), dtype = int)
for i in range (vetor[i]>=2000):
	print(saques)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:52:28) 
-- CODE:
from numpy import*

vetor = array(eval(input("saques: ")))
#saques = zeros(vetor, dtype=int)
saque = 0
for i in range (size(vetor)):
	if(vetor[i]>=2000):
		saque = saque +1
print(saque)
saques = zeros((vetor[i]), dtype = int)
for i in range (vetor[i]>=2000):
	saques[i]=saques[i]+1
	print(saques)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:52:49) 
-- CODE:
from numpy import*

vetor = array(eval(input("saques: ")))
#saques = zeros(vetor, dtype=int)
saque = 0
for i in range (size(vetor)):
	if(vetor[i]>=2000):
		saque = saque +1
print(saque)
saques = zeros((vetor[i]), dtype = int)
for i in range (vetor[i]>=2000):
	saques[i]=saques[i]+1
print(saques)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:53:13) 
-- CODE:
from numpy import*

vetor = array(eval(input("saques: ")))
#saques = zeros(vetor, dtype=int)
saque = 0
for i in range (size(vetor)):
	if(vetor[i]>=2000):
		saque = saque +1
print(saque)
saques = zeros((vetor[i]), dtype = int)
for i in range (vetor[i]>=2000):
	saques[i]=saques[i]+1
	print(saques)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:53:53) 
-- CODE:
from numpy import*

vetor = array(eval(input("saques: ")))
#saques = zeros(vetor, dtype=int)
saque = 0
for i in range (size(vetor)):
	if(vetor[i]>=2000):
		saque = saque +1
print(saque)
saques = zeros((vetor[i]), dtype = int)
for i in range (saques[i]>=2000):
	saques[i]=saques[i]+1
	print(saques)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:54:00) 
-- CODE:
from numpy import*

vetor = array(eval(input("saques: ")))
#saques = zeros(vetor, dtype=int)
saque = 0
for i in range (size(vetor)):
	if(vetor[i]>=2000):
		saque = saque +1
print(saque)
saques = zeros((vetor[i]), dtype = int)
for i in range (saques[i]>=2000):
	
	print(saques)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:54:27) 
-- CODE:
from numpy import*

vetor = array(eval(input("saques: ")))
#saques = zeros(vetor, dtype=int)
saque = 0
for i in range (size(vetor)):
	if(vetor[i]>=2000):
		saque = saque +1
print(saque)
saques = zeros((vetor[i]), dtype = int)
for i in range (saques[i]>=2000):
	print(saques)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
